Add structure at index

--- a/index.html
+++ b/index.html
@@ -5,32 +5,22 @@
   <title>CSS</title>
 </head>
 <body >
-  <h1>Welcome to Asgard</h1>
-  <div>
-    <section>
-      <h2>Thor</h2>
-      <p>
-        Тор  — в скандинавской мифологии один из асов, бог грома и молний, защищающий богов и людей от великанов и чудовищ. «Триждырождённый» старший сын Одина и богини земли Ёрд (либо Хлодюн, либо Фьёргюн). В области распространения германских языков Тору посвящён день недели — четверг . Образ восходит к протоиндоевропейскому божеству грома; таким образом, близок таким богам индоевропейских народов, как Индра, Таранис, Перкунас, Перун, Зевс и т. д.
-      </p>
-    </section>
-  </div>
-  <div>
-    <section>
-      <h2>О́дин</h2>
-      <p>
-        О́дин, или Во́тан (прагерм. *Wōđanaz или *Wōđinaz; др.-сканд. Óðinn) — верховный бог в германо-скандинавской мифологии, отец и предводитель асов, сын Бора и Бестлы, внук Бури. Мудрец и шаман, знаток рун и сказов (саг), царь-жрец, колдун-воин, бог войны и победы, покровитель военной аристократии, хозяин Вальхаллы и повелитель валькирий. Супруга — Фригг.
-
-В соответствии с германо-скандинавскими эсхатологическими мифами, в день Рагнарёка Один будет убит чудовищным волком Фенриром.
-      </p>
-    </section>
-  </div>
-  <div>
-    <section>
-      <h2>Ло́ки</h2>
-      <p>
-        Ло́ки (др.-сканд. Loki) — сын ётуна Фарбаути и Лаувейи, также упоминается в качестве бога хитрости, обмана и коварства (по некоторым версиям также огня) и т. п. качеств в германо-скандинавской мифологии, происходит из рода ётунов, но асы разрешили ему жить с ними в Асгарде за его необыкновенный ум, хитрость и мудрость. Локи имеет несколько хейти, включая Хведрунг (Hveðrungr) («Прорицание вёльвы», 55, «Перечень Инглингов», 32), Лофт (Loptr) и Лодур (Lóðurr).
-      </p>
-    </section>
-  </div> 
+<!-- h1.main-heading{heading 1}+section>(h2.main-heading{heading 2})+article.container*3>h3.heading-art{title article}+p>lorem120) -->
+<h1 class="main-heading">heading 1</h1>
+<section>
+  <h2 class="main-heading">heading 2</h2>
+  <article class="container">
+    <h3 class="heading-art">title article</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore repudiandae, explicabo nulla recusandae laborum eligendi, doloremque placeat, consectetur alias tenetur temporibus! Eaque esse veritatis id, deleniti alias consequuntur consectetur, accusamus voluptatum, exercitationem asperiores adipisci. Quidem voluptatibus quasi similique sequi! Aspernatur modi deleniti voluptatem obcaecati, animi perspiciatis maxime amet ad non delectus tempore possimus nulla dolorem laudantium iusto libero. Suscipit provident consequatur sequi distinctio eius reprehenderit. Beatae, atque! Voluptatem cumque necessitatibus eligendi non ad, ducimus quod rem. Expedita explicabo nam eaque impedit velit ullam optio, labore, doloribus unde nemo doloremque officiis rem assumenda voluptatum exercitationem pariatur facere aut autem! Eius iste dolor nostrum? Repellat, corporis? Perferendis itaque dolor, reprehenderit temporibus ducimus alias perspiciatis quia suscipit, cupiditate impedit eligendi autem nemo voluptate!</p>
+  </article>
+  <article class="container">
+    <h3 class="heading-art">title article</h3>
+    <p>Fuga qui possimus est modi ratione incidunt reprehenderit consectetur maiores suscipit sed! Quaerat debitis sint voluptatibus voluptatem fugiat temporibus veniam distinctio consequuntur? Numquam iure, ut excepturi doloremque consequatur obcaecati suscipit incidunt consectetur sed, culpa dicta recusandae reprehenderit animi deserunt quia sunt sint? Eveniet, veritatis error molestiae a architecto, dicta modi laboriosam totam vitae ex quas necessitatibus expedita voluptatem accusantium distinctio, cum dolores enim adipisci earum. Quam deserunt voluptatibus similique eveniet itaque rem, error aperiam dolorum nostrum nihil. Accusamus ullam labore nihil nam quam molestiae repellat! Consequatur nulla nam, aspernatur quam soluta nemo. Eos quibusdam blanditiis consequatur voluptatem odio consectetur, error iusto veritatis commodi laudantium beatae doloribus ducimus, laborum optio dolorem dolor inventore dolore cupiditate placeat esse quas temporibus. Deleniti, distinctio?</p>
+  </article>
+  <article class="container">
+    <h3 class="heading-art">title article</h3>
+    <p>Distinctio doloremque sit atque, aperiam, dolore perspiciatis repellat temporibus est voluptas voluptates error, laudantium rerum accusamus molestiae recusandae obcaecati? At ut quas quasi nihil natus id dolores optio! Nam, magnam modi. Quasi, animi ab? Minima eaque consectetur, iusto at molestiae officia quas porro incidunt dignissimos maxime, facilis libero architecto. Porro sunt commodi reprehenderit iusto libero culpa inventore dolorem quisquam debitis corrupti illum quo expedita doloribus nulla accusantium accusamus quas laborum sint dolorum, totam perferendis voluptatem saepe officia. Culpa alias, itaque at hic incidunt est reiciendis voluptas commodi consequuntur architecto iure id fugiat sint nihil esse, libero cumque ipsa maxime voluptatum ipsum veritatis, molestias ullam pariatur rerum? Voluptate minima dolore iure quam, veniam officia praesentium pariatur consequuntur animi repellendus iste sint.</p>
+  </article>
+</section>  
 </body>
 </html>
