--- a/index.html
+++ b/index.html
@@ -2,25 +2,48 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <title>CSS</title>
 </head>
+
 <body >
-<!-- h1.main-heading{heading 1}+section>(h2.main-heading{heading 2})+article.container*3>h3.heading-art{title article}+p>lorem120) -->
-<h1 class="main-heading">heading 1</h1>
-<section>
-  <h2 class="main-heading">heading 2</h2>
-  <article class="container">
-    <h3 class="heading-art">title article</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Inventore repudiandae, explicabo nulla recusandae laborum eligendi, doloremque placeat, consectetur alias tenetur temporibus! Eaque esse veritatis id, deleniti alias consequuntur consectetur, accusamus voluptatum, exercitationem asperiores adipisci. Quidem voluptatibus quasi similique sequi! Aspernatur modi deleniti voluptatem obcaecati, animi perspiciatis maxime amet ad non delectus tempore possimus nulla dolorem laudantium iusto libero. Suscipit provident consequatur sequi distinctio eius reprehenderit. Beatae, atque! Voluptatem cumque necessitatibus eligendi non ad, ducimus quod rem. Expedita explicabo nam eaque impedit velit ullam optio, labore, doloribus unde nemo doloremque officiis rem assumenda voluptatum exercitationem pariatur facere aut autem! Eius iste dolor nostrum? Repellat, corporis? Perferendis itaque dolor, reprehenderit temporibus ducimus alias perspiciatis quia suscipit, cupiditate impedit eligendi autem nemo voluptate!</p>
-  </article>
-  <article class="container">
-    <h3 class="heading-art">title article</h3>
-    <p>Fuga qui possimus est modi ratione incidunt reprehenderit consectetur maiores suscipit sed! Quaerat debitis sint voluptatibus voluptatem fugiat temporibus veniam distinctio consequuntur? Numquam iure, ut excepturi doloremque consequatur obcaecati suscipit incidunt consectetur sed, culpa dicta recusandae reprehenderit animi deserunt quia sunt sint? Eveniet, veritatis error molestiae a architecto, dicta modi laboriosam totam vitae ex quas necessitatibus expedita voluptatem accusantium distinctio, cum dolores enim adipisci earum. Quam deserunt voluptatibus similique eveniet itaque rem, error aperiam dolorum nostrum nihil. Accusamus ullam labore nihil nam quam molestiae repellat! Consequatur nulla nam, aspernatur quam soluta nemo. Eos quibusdam blanditiis consequatur voluptatem odio consectetur, error iusto veritatis commodi laudantium beatae doloribus ducimus, laborum optio dolorem dolor inventore dolore cupiditate placeat esse quas temporibus. Deleniti, distinctio?</p>
-  </article>
-  <article class="container">
-    <h3 class="heading-art">title article</h3>
-    <p>Distinctio doloremque sit atque, aperiam, dolore perspiciatis repellat temporibus est voluptas voluptates error, laudantium rerum accusamus molestiae recusandae obcaecati? At ut quas quasi nihil natus id dolores optio! Nam, magnam modi. Quasi, animi ab? Minima eaque consectetur, iusto at molestiae officia quas porro incidunt dignissimos maxime, facilis libero architecto. Porro sunt commodi reprehenderit iusto libero culpa inventore dolorem quisquam debitis corrupti illum quo expedita doloribus nulla accusantium accusamus quas laborum sint dolorum, totam perferendis voluptatem saepe officia. Culpa alias, itaque at hic incidunt est reiciendis voluptas commodi consequuntur architecto iure id fugiat sint nihil esse, libero cumque ipsa maxime voluptatum ipsum veritatis, molestias ullam pariatur rerum? Voluptate minima dolore iure quam, veniam officia praesentium pariatur consequuntur animi repellendus iste sint.</p>
-  </article>
-</section>  
+
+<!-- h1.mainHead+nav>ol>(li.article1{part#})*4+section>h2{namesection}+article[id="#part1"]="link1"*4>h3.heading-art{title article}+p>lorem40 -->
+<h1 align="center",class="mainHead" >Page Title</h1>
+<nav>
+  <ol>
+    <li class="numbers"><a href="#part1">article 1</a></li>
+    <li class="numbers"><a href="#part2">article 2</a></li>
+    <li class="numbers"><a href="#part3">article 3</a></li>
+    <li class="numbers"><a href="#part4">article 4</a></li>
+    <section>
+      <h2 align="center", class="sectionHead">Section Title</h2>
+      <article id="part1">
+        <h3 align="center", class="conteinerHead">number article 1</h3>
+        <p class="particle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero molestias minus adipisci voluptatem quasi dolorum tempore, nam reiciendis ducimus asperiores provident suscipit repellat possimus natus id in corporis amet repellendus laborum, eaque temporibus quas. Repellat consequuntur optio nobis perspiciatis corrupti?</p>
+        <p class="particle">Dignissimos fuga odit atque tenetur architecto laboriosam dolores ipsam inventore aliquam? Recusandae mollitia eum cupiditate! Pariatur doloremque ratione nostrum. Iusto reprehenderit harum totam possimus sit ad distinctio facilis autem nobis enim exercitationem voluptate sequi, sint repudiandae corporis, veritatis soluta consequuntur.</p>
+        <p class="particle">Ipsam dolore voluptatem, fugiat minima, ipsum veniam facilis quisquam totam asperiores blanditiis numquam molestias accusamus nisi ex magnam quis voluptates assumenda magni cupiditate consequatur eius maxime est. Quasi eius consequatur exercitationem porro sequi, provident possimus dolor praesentium laboriosam, qui voluptate.</p>
+      </article>
+      <article id="part2">
+        <h3 align="center", class="conteinerHead">number article 2</h3>
+        <p class="particle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quasi, officia libero facere optio voluptates nulla voluptatem nobis, magnam atque eligendi consectetur officiis tempora? Sint et suscipit vero consectetur! Provident alias enim quo cupiditate omnis libero fuga porro similique facilis odio?</p>
+        <p class="particle">Natus, quod? Fugit possimus consectetur dolorum cupiditate repellat qui, quia quidem eaque obcaecati nisi. Esse numquam tempora modi, optio repellat magnam ex, porro veniam ab tempore quia cumque obcaecati a molestiae et tenetur est vel distinctio voluptatibus commodi cum dolore.</p>
+        <p class="particle">Eligendi id doloribus eius quia expedita quod obcaecati facilis tenetur! Non rerum saepe maiores nisi veniam, quis ea dolore nam repudiandae dolorem numquam aperiam temporibus ad odio autem, deleniti ab omnis ex ducimus minus libero error quo. Libero, sapiente possimus.</p>
+      </article>
+      <article id="part3">
+        <h3 align="center", class="conteinerHead">number article 3</h3>
+        <p class="particle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit architecto voluptatibus tempore adipisci doloribus dignissimos voluptatem. Ducimus ex, cum nemo tenetur commodi, officiis repudiandae beatae corporis quas sint voluptate nisi. Molestiae obcaecati exercitationem nostrum quo, laboriosam earum beatae ipsam nisi.</p>
+        <p class="particle">Possimus animi fugit recusandae saepe. Placeat nemo nihil voluptates reiciendis, a ullam labore aliquid fugiat quaerat repudiandae impedit facere at velit quas eveniet officia, tenetur praesentium. Earum saepe quidem molestias aperiam nesciunt itaque, recusandae libero qui quis cum quam ab!</p>
+        <p class="particle">Eaque, quibusdam. Totam ex fugit possimus quis est culpa quas iure cupiditate libero consectetur eum dolorem recusandae officiis enim commodi beatae porro tenetur minima, nisi quod. Voluptate, velit reiciendis in magni voluptatum consectetur? Veritatis id harum alias maiores saepe corporis!</p>
+      </article>
+      <article id="part4">
+        <h3 align="center",class="conteinerHead">number article 4</h3>
+        <p class="particle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus neque tempora, earum quisquam ipsum voluptates maxime minus harum incidunt, omnis dignissimos! Consequuntur consectetur illum nostrum reiciendis, earum dolorem recusandae suscipit totam sequi quam minus culpa atque necessitatibus ut dignissimos itaque?</p>
+        <p class="particle">Dolore accusantium saepe, eligendi aperiam suscipit ducimus? At, odit! Repudiandae dignissimos quibusdam exercitationem, aspernatur deleniti sunt, eaque libero architecto quia ad minus sapiente modi, ipsam aliquid accusantium molestiae unde? Dolores delectus laborum maxime at tempore amet culpa nostrum libero excepturi!</p>
+        <p class="particle">Repellendus, sit ratione id cum obcaecati tempore! Sint consectetur obcaecati at velit aperiam quisquam nihil laudantium et iste aut excepturi neque magni eius tempore assumenda veniam nulla, laborum saepe officiis beatae fugit ea quia repellendus exercitationem? Atque incidunt nisi fugiat.</p>
+      </article>
+    </section>
+  </ol>
+</nav>
 </body>
 </html>
