--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 
 <body >
-
-
+  <h1 align="center", class="mainHead">Title page</h1>
 <nav>
   <ol>
     <li class="numbers"><a href="#part1">article 1</a></li>
